--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Ms dhoni </h1>
+    <h2>Ram</h2>
     <img src="ms dhoni.webp" alt="">
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores veritatis laborum perspiciatis, ad commodi ut neque nemo, aperiam nobis repellat consectetur et blanditiis, aliquid mollitia fuga repellendus nisi maxime dolores!</p>
     
