--- a/project/index.html
+++ b/project/index.html
@@ -16,6 +16,7 @@
     <img width="1000" src="Screenshot (15).png" alt="">
     <h1>ADVERTISEMENT</h1>
     <img width="1000" src="Screenshot (13).png" alt="">
+    <p>booking tickets</p>
     
 </body>
 </html>
